--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
-    // "baseUrl": "."
+    "noEmit": true,
+    "baseUrl": "src"
     // "paths": {
     //   "src/*": ["src/*"],
     //   "components/*": ["src/components/*"],
